apps/zimic-web/src/styles/custom.css
@layer theme, base, components, utilities;
@import 'tailwindcss/theme.css' layer(theme) important;
@import 'tailwindcss/utilities.css' layer(utilities) important;

@source '../../{src,docs}/**/*.{ts,tsx,md,mdx}';

@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

@theme {
  --color-primary-50: #cadcfe;
  --color-primary-100: #aac7fd;
  --color-primary-200: #8ab2fc;
  --color-primary-300: #6a9cfc;
  --color-primary-400: #4a87fb;
  --color-primary-500: #2a72fa;
  --color-primary-600: #2167ed;
  --color-primary-700: #185be0;
  --color-primary-800: #0e50d2;
  --color-primary-900: #0544c5;

  --color-white-light: #fafafa;
  --color-white-dark: #e8f2f8;
  --color-black: #011627;

  --color-highlight-200: #36badf;
  --color-highlight-300: #3097ec;
  --color-highlight-400: #2a72fa;
  --color-highlight-500: #4372ff;
  --color-highlight-600: #3f2ca9;
}

:root {
  --ifm-color-primary-lightest: var(--color-primary-300);
  --ifm-color-primary-lighter: var(--color-primary-400);
  --ifm-color-primary-light: var(--color-primary-500);
  --ifm-color-primary: var(--color-primary-600);
  --ifm-color-primary-dark: var(--color-primary-700);
  --ifm-color-primary-darker: var(--color-primary-800);
  --ifm-color-primary-darkest: var(--color-primary-900);

  --ifm-background-color: var(--color-white-light);
  --ifm-background-surface-color: var(--ifm-background-color);

  --ifm-font-color-base: var(--color-black);
  --ifm-color-content: var(--ifm-font-color-base);

  --ifm-footer-link-color: var(--ifm-font-color-base);
  --ifm-footer-background-color: var(--ifm-navbar-background-color);

  --ifm-code-font-size: 90%;

  --ifm-hover-overlay: color-mix(in oklab, var(--color-primary-600) 5%, transparent);

  --highlighted-code-background-color: #eaeff9;
  --highlighted-code-border-color: #9dbdf7;

  --error-code-background-color: #f7ecef;
  --error-code-border-color: #f8a6aa;

  --docsearch-searchbox-background: var(--ifm-background-color);
  --docsearch-searchbox-focus-background: var(--ifm-background-surface-color);

  --docsearch-hit-color: var(--ifm-font-color-base);
  --docsearch-hit-highlight-color: color-mix(in oklab, var(--color-primary-600) 10%, transparent);
  --docsearch-muted-color: color-mix(in oklab, var(--color-white-light) 70%, transparent);
  --docsearch-text-color: var(--ifm-font-color-base);
  --docsearch-highlight-color: var(--ifm-font-color-base);
  --docsearch-secondary-text-color: color-mix(in oklab, var(--ifm-color-content) 80%, transparent);

  --ifm-font-family-base:
    'Noto Sans', system-ui, -apple-system, 'Segoe UI', Roboto, Ubuntu, Cantarell, 'Noto Sans', sans-serif,
    BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol';

  font-family: var(--ifm-font-family-base);
}

:root[data-theme='dark'] {
  --ifm-color-primary-lightest: var(--color-primary-50);
  --ifm-color-primary-lighter: var(--color-primary-100);
  --ifm-color-primary-light: var(--color-primary-200);
  --ifm-color-primary: var(--color-primary-300);
  --ifm-color-primary-dark: var(--color-primary-400);
  --ifm-color-primary-darker: var(--color-primary-500);
  --ifm-color-primary-darkest: var(--color-primary-600);

  --ifm-background-color: var(--color-black);
  --ifm-background-surface-color: var(--ifm-background-color);

  --ifm-font-color-base: var(--color-white-light);
  --ifm-color-content: var(--ifm-font-color-base);

  --ifm-footer-link-color: var(--ifm-font-color-base);
  --ifm-footer-background-color: var(--ifm-navbar-background-color);

  --ifm-hover-overlay: color-mix(in oklab, var(--color-primary-600) 20%, transparent);

  --highlighted-code-background-color: #0c2745;
  --highlighted-code-border-color: #2a579d;

  --error-code-background-color: #3f1f2d;
  --error-code-border-color: #9c2d37;

  --docsearch-searchbox-background: var(--ifm-background-color);
  --docsearch-searchbox-focus-background: var(--ifm-color-black);

  --docsearch-hit-color: var(--ifm-font-color-base);
  --docsearch-hit-highlight-color: color-mix(in oklab, var(--color-primary-500) 70%, transparent);
  --docsearch-muted-color: color-mix(in oklab, var(--color-white-light) 70%, transparent);
  --docsearch-text-color: var(--ifm-font-color-base);
  --docsearch-highlight-color: var(--ifm-font-color-base);
  --docsearch-secondary-text-color: color-mix(in oklab, var(--ifm-color-content) 80%, transparent);

  .navbar {
    border-bottom: 1px solid var(--ifm-color-gray-800);
  }
}

button,
input,
select,
textarea {
  font-family: var(--ifm-font-family-base);
}

.markdown p code {
  vertical-align: text-top;
}

.menu__list-item-collapsible:has(.menu__link:not([href])) {
  background-color: transparent;
}

.menu__link:not([href]) {
  cursor: default;
  background-color: transparent;

  :hover {
    background-color: transparent;
  }
}

.navbar {
  border-bottom: 1px solid var(--ifm-color-gray-300);
}

:root[data-theme='dark'] {
  .navbar {
    border-bottom: 1px solid var(--ifm-color-gray-800);
  }
}

.navbar__toggle {
  @apply h-8 w-8 rounded-full p-1 transition-colors;

  &:hover {
    background-color: var(--ifm-color-emphasis-200);
  }

  svg {
    width: 100%;
    height: 100%;
  }
}

.close,
.navbar-sidebar__close {
  @apply h-fit w-fit flex-0 rounded-full p-1.5 opacity-100 transition-colors;

  svg {
    @apply h-3 w-3 overflow-visible;

    g {
      stroke: currentColor;
      stroke-width: 2px;
      stroke-linecap: round;
    }
  }
}

.close {
  @apply my-auto mr-1;

  color: var(--ifm-color-emphasis-50);
  background-color: transparent;

  &:hover {
    background-color: var(--ifm-color-emphasis-800);
  }
}

.navbar-sidebar__close {
  color: var(--ifm-color-content);
  background-color: transparent;

  &:hover {
    background-color: var(--ifm-color-emphasis-200);
  }
}

.header-github-link::before {
  content: '';
  width: 24px;
  height: 24px;
  display: flex;
  background-color: var(--ifm-navbar-link-color);
  mask-image: url('/images/github.svg');
  transition: background-color var(--ifm-transition-fast) var(--ifm-transition-timing-default);
}

.header-github-link:hover::before {
  background-color: var(--ifm-navbar-link-hover-color);
}

.footer {
  border-top: 1px solid var(--ifm-color-gray-300);
}

:root[data-theme='dark'] {
  .footer {
    border-top: 1px solid var(--ifm-color-gray-800);
  }
}

.footer__item {
  svg {
    width: 0.7rem;
    height: 0.7rem;
    margin-left: 0.5rem;
  }
}

.footer__links {
  margin-bottom: 3rem;
}

.code-block-highlighted-line {
  code[class*='codeBlockLinesWithNumbering'] & {
    display: table-row;

    [class*='codeLineNumber'] {
      background-color: var(--highlighted-code-background-color);
      box-shadow: inset 0.2rem 0 0 0 var(--highlighted-code-border-color);
    }

    [class*='codeLineContent'] {
      display: inline-block;
      width: 100%;
      background-color: var(--highlighted-code-background-color);
    }
  }

  code:not([class*='codeBlockLinesWithNumbering']) & {
    display: block;
    margin: 0 calc(var(--ifm-pre-padding) * -1);
    padding: 0 var(--ifm-pre-padding);
    background-color: var(--highlighted-code-background-color);
    box-shadow: inset 0.2rem 0 0 0 var(--highlighted-code-border-color);
  }
}

.code-block-error-line {
  code[class*='codeBlockLinesWithNumbering'] & {
    display: table-row;

    [class*='codeLineNumber'] {
      background-color: var(--error-code-background-color);
      box-shadow: inset 0.2rem 0 0 0 var(--error-code-border-color);
    }

    [class*='codeLineContent'] {
      display: inline-block;
      width: 100%;
      background-color: var(--error-code-background-color);
    }
  }

  code:not([class*='codeBlockLinesWithNumbering']) & {
    display: block;
    margin: 0 calc(var(--ifm-pre-padding) * -1);
    padding: 0 var(--ifm-pre-padding);
    background-color: var(--error-code-background-color);
    box-shadow: inset 0.2rem 0 0 0 var(--error-code-border-color);
  }
}

.menu__link,
.card,
.pagination-nav__link {
  @apply rounded-lg;
}

.card,
.pagination-nav__link {
  @apply hover:bg-primary-600/5 dark:hover:bg-primary-600/20 hover:border-primary-600/40 shadow-none transition-colors;
}

.theme-admonition {
  div:nth-child(1) {
    span {
      text-transform: none;
    }
  }
}

.DocSearch-Button {
  @apply dark:bg-primary-600/30 dark:hover:bg-primary-600/50 dark:focus-visible:ring-primary-300 dark:active:bg-primary-600/30 focus-visible:ring-primary-300 dark:hover:border-primary-500 dark:border-primary-600/70 dark:active:border-primary-600 dark:text-white-light border-white-dark bg-white-dark active:border-white-dark active:bg-white-dark h-fit cursor-pointer rounded-lg border-2 py-1.5 pr-4 pl-3 text-center font-semibold text-slate-500 transition-all outline-none hover:border-slate-200 hover:bg-slate-200 hover:ring-0 focus-visible:ring-2;

  .DocSearch-Button-Container {
    @apply flex gap-x-2;
  }

  .DocSearch-Search-Icon {
    @apply h-5 w-5 text-current;
  }

  .DocSearch-Button-Keys {
    @apply hidden;
  }

  .DocSearch-Button-Placeholder {
    @apply p-0 text-current;
  }
}

.DocSearch-Modal {
  .DocSearch-Form {
    @apply border-primary-300 focus-within:border-primary-400 m-2 h-fit rounded-lg border-2 px-2 py-0 transition-colors;

    .DocSearch-Search-Icon {
      @apply transition-colors;
      color: var(--docsearch-text-color);
    }

    .DocSearch-MagnifierLabel {
      @apply p-2;

      svg {
        @apply h-5 w-5 shrink-0;
      }
    }

    .DocSearch-Input {
      @apply flex-1 text-base;
    }

    .DocSearch-Actions {
      @apply w-fit;

      .DocSearch-Clear,
      .DocSearch-Divider {
        display: none;
      }

      button {
        @apply h-fit p-2;
      }
    }
  }

  .DocSearch-Hit-icon {
    color: var(--docsearch-text-color);
  }
}

@media (max-width: 996px) {
  .footer__links {
    text-align: center;

    .footer__col {
      margin-bottom: 0;
    }

    .footer__col + .footer__col {
      margin-top: calc(var(--ifm-spacing-vertical) * 3);
    }

    .footer__items {
      display: flex;
      flex-direction: column;
      align-items: center;
    }
  }
}

